<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.broke31.filmm.graphic.LoginActivity">

    <EditText
        android:id="@+id/domainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/domain"
        android:maxLines="1"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:padding="5sp"
        android:layout_marginTop="10sp"

        />
    <EditText
        android:id="@+id/usernameEditText"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@id/domainEditText"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:padding="5sp"
        android:layout_marginTop="10sp"

        />
    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/password"
        android:layout_below="@id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="@drawable/rounded_edittext"
        android:padding="5sp"
        android:layout_marginTop="10sp"

        />
    <EditText
        android:id="@+id/ipEditText"
        android:hint="@string/_192_168_1_1"
        android:layout_below="@id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:background="@drawable/rounded_edittext"
        android:padding="5sp"
        android:layout_marginTop="10sp"
        />
    <Button
        android:id="@+id/okButton"
        android:text="@string/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignParentEnd="true"
        android:background="@drawable/buttonshape"
        android:onClick="OkclickListener"
        />

</RelativeLayout>
