<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout">

    <ImageView
    android:id="@+id/secondPhoto"
    android:layout_width="match_parent"
    android:src="@drawable/back"
    android:background="#000000"
    android:padding="5sp"
    android:scaleType="fitXY"
    android:layout_height="200sp"
    android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageId"
        android:layout_width="140sp"
        android:layout_height="200sp"
        android:scaleType="fitXY"
        android:padding="5sp"
        android:background="#000000"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10sp"
        />
    <RelativeLayout
        android:id="@+id/relTitle"
        android:layout_toRightOf="@id/imageId"
        android:layout_below="@id/secondPhoto"
        android:layout_marginTop="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingLeft="10sp"
        android:paddingTop="15sp"
        android:textColor="#ffffff"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/language"
        android:text="@string/language"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_below="@id/title"
        android:paddingLeft="10sp"
      />

    <TextView
        android:id="@+id/rilasciato"
        android:text="@string/released"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:paddingBottom="3sp"
        android:paddingLeft="10sp"
        android:layout_below="@id/language"
         />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imdbImage"
        android:layout_width="70sp"
        android:layout_height="80sp"
        android:src="@drawable/imdb2"
        android:paddingLeft="20sp"
        android:layout_below="@id/imageId"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/imdbRatingId"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingLeft="10sp"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:layout_below="@id/imageId"
        android:paddingTop="23sp"
        android:layout_toRightOf="@id/imdbImage"
        android:textColor="#ffffff"
        />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/scrollView2"
        android:paddingTop="20sp"
        android:layout_alignStart="@id/imageId"
        android:layout_below="@id/imdbImage">

        <TextView
            android:id="@+id/descrizione"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15sp"
            android:lineSpacingMultiplier="1.1"
            android:textStyle="bold"
           />

    </ScrollView>

    <ImageView
        android:id="@+id/play"
        android:src="@drawable/play"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:onClick="playFilm"
        android:layout_marginBottom="54dp"
        android:layout_alignBottom="@+id/imageId"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
